--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ body{
     padding: 15px;
     font-size: 18px;
     width: 100%;
+    border-radius: 5px;
 }
 
 #add-task-form input:focus{
@@ -55,6 +56,7 @@ body{
     top: 0;
     right: 0;
     padding-top: 3px;
+    border-radius: 0px 5px 5px 0px;
 }
 
 #add-btn:hover{
@@ -78,13 +80,14 @@ ion-icon{
     height: 50px;
     line-height: 50px;
     position: relative;
-    border-bottom: 3px solid #34073d;
+    border-bottom: 2px solid #34073d;
     background-color: #FFF;
     color: #34073d;
     margin-bottom: 10px;
     padding-left: 15px;
     transition: 0.4;
     font-weight: bold;
+    border-radius: 5px;
 }
 
 #tasks-list li span {
