--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+
 body{
     margin: 0;
     padding: 0;
@@ -12,6 +14,7 @@ body{
     width: 350px;
     margin-left: auto;
     margin-right: auto;
+    transition: width .5s;
 }
 
 /* Tasks Form */
@@ -120,6 +123,7 @@ ion-icon{
 .remove-btn:hover{
     color: #FFF;
     background-color: #EB0927;
+    border-radius: 0px 4px 3px 0px;
 }
 
 .hide{
